# House_Price_Prediction

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
app/: app.py
data/processed/: cleaned_data.csv
data/raw/: housing.csv
models/: model.pkl
notebooks/: eda.ipynb
src/: config.py  predict.py  train.py
