[tool.poetry]
name = "house-price-prediction"
version = "0.1.0"
description = "A Python project to predict house prices"
author = "RahulChy007 <email@example.com>"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
scikit-learn = "^0.24"

[tool.poetry.dev-dependencies]
pylint = "^2.9"
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"